--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -17,6 +17,7 @@ These are the changes for version 1.7 - The Improvement Iteration.
  * Added four mineshaft entrances designs, all created by Ghostdancer. Mace will select one entrance to use in the city.
  * Slightly changed the location of resources: gold + diamonds are in the lowest third, lapis + redstone are in the lowest two thirds and coal + iron are found everywhere.
  * Apartment frequency is now "rare" rather than "average".
+ * Added a fire moat, which will appear 10% of the time. Thanks to coau14 for suggess
  * Outside fire lights will no longer set fire to the flags.
  * Flowers and grass will now spawn in more places in the city.
  * The mini farm is now enclosed to stop animals destroying it.
