--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -7,14 +7,13 @@ These are the changes for version 1.7 - The Improvement Iteration.
 
  * You can now tell Mace to include NPC spawners in the city, which which will use Ghostdancer's Mobs for Mace. Please see the Mobs for Mace thread for download instructions.
  * Added a windmill to the farming buildings. It has the unique frequency.
+ * Added a bank, which is inspired by coau14's bank. It has the unique frequency.
  * Added a theatre. It has the unique frequency.
  * Added an igloo, which was created by coau14. It has the unique frequency.
- * Added a bank, which is inspired by coau14's bank.
- * Added a blacksmith. It has rare frequency.
- * Added a water well. It has rare frequency.
+ * Added several buildings with rare frequency: blacksmith, tailor and water well.
  * Added two sandstone houses. They both have common frequency.
  * The mineshaft now has a proper entrance that will appear in a random location in the city.
- * Added four mineshaft entrances designs, all created by Ghostdancer. Mace will select one entrance to use in the city.
+ * Added four mineshaft entrance designs, all created by Ghostdancer. Mace will select one entrance to use in the city.
  * Slightly changed the location of resources: gold + diamonds are in the lowest third, lapis + redstone are in the lowest two thirds and coal + iron are found everywhere.
  * Apartment frequency is now "rare" rather than "average".
  * Added a fire moat, which will appear 10% of the time. Thanks to coau14 for suggess
