--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -15,11 +15,12 @@ These are the changes for version 1.7 - The Improvement Iteration.
  * The mineshaft now has a proper entrance that will appear in a random location in the city.
  * Added four mineshaft entrance designs, all created by Ghostdancer. Mace will select one entrance to use in the city.
  * Slightly changed the location of resources: gold + diamonds are in the lowest third, lapis + redstone are in the lowest two thirds and coal + iron are found everywhere.
- * Apartment frequency is now "rare" rather than "average".
- * Added a fire moat, which will appear 10% of the time. Thanks to coau14 for suggess
+ * In mineshaft chests the common blocks will now appear in larger amounts.
+ * Apartment frequency has been switched to "rare" instead of "average".
+ * Added a fire moat, which will appear 10% of the time. Thanks to coau14 for this suggestion.
  * Outside fire lights will no longer set fire to the flags.
- * Flowers and grass will now spawn in more places in the city.
- * The mini farm is now enclosed to stop animals destroying it.
+ * Flowers and grass will appear in more places in the city.
+ * The mini farms are now enclosed to stop animals destroying them.
  * Added some more combinations to the brothel names.
  * Street signs are now on posts. Thanks to shad3w44 for this suggestion.
  * Updated to Substrate 0.7.
