--- a/wiki/ToDo.wiki
+++ b/wiki/ToDo.wiki
@@ -10,7 +10,7 @@ For changes that are done, but not released yet, please see the UnreleasedChange
  * More buildings
   * Wizard's tower (unique)
   * Large park (unique)
- * Add an option to generate empty plots for a multiplayer server
+ * Add an option to generate empty plots for a multiplayer server (make this a theme?)
  * Allow for farms to be orientated the other way
  * Add to FAQ: how to use with multiplayer servers
  * Different street lights
