--- a/wiki/Changelog.wiki
+++ b/wiki/Changelog.wiki
@@ -5,7 +5,7 @@
 
  * Portrait bug is fixed. Thank you to Ghostdancer for letting me know about that.
  * Fixed the rail rotation bug. Thank you to Commander Keen for letting me know about that.
- * Added lots more library sections and tavern combinations. All provided by SoNick - thanks!
+ * Added lots more library sections and tavern combinations. All provided by !SoNick - thanks!
  * Changed the way the lighting is called, which seems to have reduced the lighting bugs.
  * Cities without farms now have 8 empty blocks outside, rather than 16. Thank you to Arschkrampi for hassling me into that!
  * Made a couple of minor changes to the buildings.
@@ -100,7 +100,7 @@
   * Water moat is now one block higher, so the player and mobs can get out easily
   * Crenels now have a new design. Thanks to Golgrinn for the design and suggestion
   * Fixed the city saplings being unstackable with regular saplings. Thanks to Golgrinn for the bug report
-  * The range of city names is now massively increased, thanks to SoNick
+  * The range of city names is now massively increased, thanks to !SoNick
   * It's now possible to have paths without buildings, or vice-versa, if you like
   * Added light sources to the inside/outside/top of the walls and guard towers
   * Initial time is now random
@@ -121,7 +121,7 @@
 
   * The interface is done. It allows for switching off sections (moat, guard towers, farms, etc) along with setting the moat liquid and city size.
   * Thanks to Curufea for this suggestion:
-    * City name data is now stored in two text files: CityStartingWords.txt and CityEndingWords.txt. The city name is made by combining a random word from the first file with a random word from the second file. Feel free to add more words or suggest words to me and I'll add them to the official version.
+    * City name data is now stored in two text files: !CityStartingWords.txt and !CityEndingWords.txt. The city name is made by combining a random word from the first file with a random word from the second file. Feel free to add more words or suggest words to me and I'll add them to the official version.
 
 = 1.1 =
 
