Edited wiki page UnreleasedChanges through web user interface.

--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -33,6 +33,8 @@ These are the changes for version 1.7 - The Improvement Iteration.
 
 == In Progress ==
 
+ * Put the balloon above the mineshaft entrance (Ghostdancer)
+
 == Planned ==
 
  * Mineshaft features.
