--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -30,6 +30,7 @@ These are the changes for version 1.7 - The Improvement Iteration.
  * Added some more wall materials.
  * Sponge in the resource world is turned into a random wool colour for each building. This is useful for randomly coloured carpets.
  * The list of farm buildings and mineshaft entrances are taken from buildings.xml, which means anyone can add new buildings of these types. These buildings can use all the frequency values.
+ * The rail rotation code saves more frequently, which should hopefully fix any remaining issues. It is applied to the whole city now, so any rails placed in resource buildings will be turned appropriately. It doesn't look at different elevations yet.
 
 == In Progress ==
 
