Edited wiki page UnreleasedChanges through web user interface.

--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -27,6 +27,7 @@ These are the changes for version 1.7 - The Improvement Iteration.
  * The mini farms are now enclosed to stop animals destroying them.
  * Added some more combinations to the brothel names.
  * Street signs are now on posts. Thanks to shad3w44 for this suggestion.
+ * Mineshafts will no longer have gravel ceilings on the highest four levels and they will no longer have sand ceilings on the highest two levels. This stops the ceiling collapsing on you in the higher levels. Thank you to BrianSki for this idea.
  * House chests now have a slightly larger variety of items.
  * Updated to Substrate 0.7.
  * Improved the house signs.
