--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -14,6 +14,7 @@ These are the changes for version 1.7 - The Improvement Iteration.
  * Added a wool house with a hedge-garden (average frequency).
  * Added a blacksmith, tailor and water well (all rare frequency).
  * Added two sandstone houses (common frequency).
+ * Added a wizard's tower (unique frequency).
  * The mineshaft now has a proper entrance that will appear in a random location in the city.
  * Added four mineshaft entrance designs, all created by Ghostdancer. Mace will select one entrance to use in the city.
  * The balloon will appear above the mineshaft entrance, which helps to locate it. Thanks to Ghostdancer for this suggestion.
