--- a/wiki/ToDo.wiki
+++ b/wiki/ToDo.wiki
@@ -5,11 +5,10 @@ For changes that are done, but not released yet, please see the UnreleasedChange
 
 == Planned ==
 
- * Add a city hall
  * Add a boathouse when there's a water moat
  * More buildings
-  * Wizard's tower (unique)
   * Large park (unique)
+  * City hall (unique)
  * Add an option to generate empty plots for a multiplayer server (make this a theme?)
  * Allow for farms to be orientated the other way
  * Add to FAQ: how to use with multiplayer servers
