Edited wiki page UnreleasedChanges through web user interface.

--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -50,6 +50,7 @@ Moat
 Minor Stuff
 
  * City walls now go down to bedrock. Thanks to Commander Keen for this suggestion.
+ * Added an option to export the city as a schematic.
  * Apartment frequency has been switched to "very rare" instead of "average".
  * Flowers and grass will appear in more places in the city.
  * The mini farms are now enclosed to stop animals destroying them.
