Edited wiki page UnreleasedChanges through web user interface.

--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -1,65 +1,4 @@
 #summary I use this page to keep track of changes in between versions
 #labels Featured
 
-These are the changes for version 1.7 - The Improvement Iteration.
-
-== Done ==
-
-NPCs
-
- * You can now tell Mace to include NPC spawners in the city, which will use Ghostdancer's Mobs for Mace. Please see the Mobs for Mace thread for download instructions.
-
-Buildings
-
- * Added a windmill to the farming buildings (unique frequency).
- * Added a bank, which is inspired by coau14's bank (unique frequency).
- * Added a theatre (average frequency).
- * Added an igloo, which was created by coau14 (unique frequency).
- * Added a wool house with a hedge-garden (average frequency).
- * Added a blacksmith, tailor and water well (all rare frequency).
- * Added two sandstone houses (common frequency).
- * Added a wizard's tower (unique frequency).
- * Added a large park (unique frequency).
-
-Mineshaft
-
- * Written in mineshaft features, which are things like lava pools, resting stations, dungeons...
- * The mineshaft now has a proper entrance that will appear in a random location in the city.
- * Added four mineshaft entrance designs, all created by Ghostdancer. Mace will select one entrance to use in the city.
- * The balloon will appear above the mineshaft entrance, which helps to locate it. Thanks to Ghostdancer for this suggestion.
- * Slightly changed the location of resources: gold + diamonds are in the lowest third, lapis + redstone are in the lowest two thirds and coal + iron are found everywhere.
- * In mineshaft chests the common blocks will now appear in larger amounts.
- * Mineshafts will no longer have gravel ceilings on the highest four levels and they will no longer have sand ceilings on the highest two levels. This stops the ceiling collapsing on you in the higher levels. Thank you to !BrianSki for this idea.
-
-Code / Config
-
- * The code has been successfully tested in Mono 2.6 RC1 on Windows. If you run it in that version on a mac, please let me know what happens - good or bad! Including error messages is very useful to me.
- * Made a lot of minor changes to the code to bring it more inline with C# standards. It's still got a long way to go though.
- * Updated to Substrate 0.7.
- * Sponge in the resource world is turned into a random wool colour for each building. This is useful for randomly coloured carpets.
- * The list of farm buildings, mineshaft sections and mineshaft entrances are taken from buildings.xml, which means anyone can add new buildings of these types. These buildings can use all the frequency values.
- * The rail rotation code saves more frequently, which should hopefully fix any remaining issues. It is applied to the whole city now, so any rails placed in resource buildings will be turned appropriately. It doesn't look at different elevations yet.
-
-Bugs
-
- * Outside fire lights will no longer set fire to the flags.
-
-Moat
-
- * Added a fire moat, which will appear 10% of the time. Thanks to coau14 for this suggestion.
-
-Minor Stuff
-
- * City walls now go down to bedrock. Thanks to Commander Keen for this suggestion.
- * Added an option to export the city as a schematic.
- * Apartment frequency has been switched to "very rare" instead of "average".
- * Flowers and grass will appear in more places in the city.
- * The mini farms are now enclosed to stop animals destroying them.
- * Added some more combinations to the brothel names.
- * Street signs are now on posts. Thanks to shad3w44 for this suggestion.
- * House chests now have a slightly larger variety of items.
- * Improved the house signs.
- * Mace will now randomly choose between the usual glowstone street lights and the new torch street lights. Thanks to !BrianSki for this idea.
- * Very small cities had an unrealistically large number of unique buildings, so I've disabled prioritising unique buildings on very small cities.
- * Added some more wall materials.
- * Buildings have little paths, which link to the roads when possible.
+The aim for v1.8 is to have multiple cities and city themes. These two features are going to take a long time to write.
