--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -7,3 +7,5 @@ There's also some things I'd like to do before v1.8:
 
  * Add links to non-English videos about Mace to the Mace thread
  * Provide details about submitting buildings
+
+The current plan is to include the new MineCraft features (from the Adventure Update) in Mace v1.9.
