Edited wiki page UnreleasedChanges through web user interface.

--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -1,11 +1,17 @@
 #summary I use this page to keep track of changes in between versions
 #labels Featured
 
-The aim for v1.8 is to have multiple cities and city themes. These two features are going to take a long time to write.
+This page lists the features that are expected in v1.8:
 
-There's also some things I'd like to do before v1.8:
+== Done ==
 
- * Add links to non-English videos about Mace to the Mace thread
- * Provide details about submitting buildings
 
-The current plan is to include the new !MineCraft features (from the Adventure Update) in Mace v1.9.
+
+== In Progress ==
+
+ * Multiple cities
+
+== Planned ==
+
+ * City themes
+ * New interface
