--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -13,10 +13,10 @@ This page lists the features that are expected in v1.8:
  * City themes
  * New interface
  * Roads
+ * Specifyable ground block
 
 == Planned ==
 
- * Configurable ground block
  * Specified block types should allow for a data value
  * Allowed farm types should be specified in the city themes
  * Different city name files for each theme
@@ -25,3 +25,4 @@ This page lists the features that are expected in v1.8:
  * Allow for creative or survival worlds
  * Spawn point code
  * Fire-proof combinations
+ * Specifyable flowers
