--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -7,6 +7,7 @@ This page lists the features that are expected in v1.8:
 
  * Different city name files for each theme
  * Specified block types allow for a data value
+ * There's now two cactus moats - one at normal level and the original submerged one
 
 == In Progress ==
 
@@ -21,7 +22,6 @@ This page lists the features that are expected in v1.8:
  * Use Ghostdancer's resource world
  * Ghostdancer's new mineshaft entrance
  * Allowed farm types should be specified in the city themes
- * Raise the cactus moat
  * Specifyable path block
  * Novv's buildings
  * Allow for creative or survival worlds
