--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -10,6 +10,8 @@ This page lists the features that are expected in v1.8:
  * There's now two cactus moats - one at normal level and the original submerged one
  * Added five new emblems, created by Ghostdancer. They are emblems of a creeper, a pickaxe, a sword, the crafters' guild and a tree.
  * Lowered the fire and lava moats, to stop them setting fire to emblems
+ * Each city theme can have a different ground block (e.g. sand in the desert city)
+ * Redstone ore on the ground (layer 63) of the resource world will be turned into the city ground block. 
 
 == In Progress ==
 
@@ -17,7 +19,6 @@ This page lists the features that are expected in v1.8:
  * City themes
  * New interface
  * Roads
- * Specifyable ground block
 
 == Planned ==
 
