--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -5,18 +5,21 @@ This page lists the features that are expected in v1.8:
 
 == Done ==
 
+ * Buildings are now divided into three themes. They are Medieval (most of the existing buildings), Desert (the existing sandstone buildings) and Novv's Medieval buildings (all new!).
  * Different city name files for each theme
  * Specified block types allow for a data value
  * There's now two cactus moats - one at normal level and the original submerged one
  * Added five new emblems, created by Ghostdancer. They are emblems of a creeper, a pickaxe, a sword, the crafters' guild and a tree.
  * Lowered the fire and lava moats, to stop them setting fire to emblems
  * Each city theme can have a different ground block (e.g. sand in the desert city)
- * Redstone ore on the ground (layer 63) of the resource world will be turned into the city ground block. 
+ * Redstone ore on the ground (layer 63) of the resource world will be turned into the city ground block.
+ * Path block can now be specified for each city theme.
+ * Gold ore on the ground (layer 63) of the resource world will be turned into the path block.
+ * Flowers can be specified for each city theme (e.g. cacti and dead shrubs in the desert city)
 
 == In Progress ==
 
  * Multiple cities
- * City themes
  * New interface
  * Roads
 
@@ -25,9 +28,6 @@ This page lists the features that are expected in v1.8:
  * Use Ghostdancer's resource world
  * Ghostdancer's new mineshaft entrance
  * Allowed farm types should be specified in the city themes
- * Specifyable path block
- * Novv's buildings
  * Allow for creative or survival worlds
  * Spawn point code
  * Fire-proof combinations
- * Specifyable flowers
