Edited wiki page UnreleasedChanges through web user interface.

--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -30,6 +30,7 @@ This page lists the features that are expected in v1.8:
  * Allowed farm types should be specified in the city themes
  * Allow for creative or survival worlds
  * Spawn point code
+ * Gates on the fenced farms
  * Fire-proof combinations
  * Fix flower spawning
  * Cities without farms should have flowers spawning on the empty area outside
