--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -29,6 +29,7 @@ This page lists the features that are expected in v1.8:
  * Allow for creative or survival worlds
  * Spawn point code
  * Gates on the fenced farms
+ * Update progress bar
  * Fire-proof combinations
  * Fix flower spawning
  * Cities without farms should have flowers spawning on the empty area outside
