--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -16,6 +16,7 @@ This page lists the features that are expected in v1.8:
  * Path block can now be specified for each city theme.
  * Gold ore on the ground (layer 63) of the resource world will be turned into the path block.
  * Flowers can be specified for each city theme (e.g. cacti and dead shrubs in the desert city)
+ * Cities without farms will now have flowers on the empty area outside
 
 == In Progress ==
 
@@ -32,7 +33,6 @@ This page lists the features that are expected in v1.8:
  * Update progress bar
  * Fire-proof combinations
  * Fix flower spawning
- * Cities without farms should have flowers spawning on the empty area outside
 
 == Maybe ==
 
